<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_introduce"
            android:icon="@drawable/ic_light_bulb"
            android:title="@string/menu_introduce" />
        <item
            android:id="@+id/nav_user_manager"
            android:icon="@drawable/ic_manager"
            android:title="@string/menu_manager" />
        <item
            android:id="@+id/nav_list_restaurant"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_list_restaurant" />
        <item
            android:id="@+id/nav_notify"
            android:icon="@drawable/ic_notification2"
            android:title="@string/menu_notify" />
    </group>
</menu>