<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:text="@string/change_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/groupService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <RadioButton
            android:id="@+id/txtServiceReservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reservation" />

        <RadioButton
            android:id="@+id/txtServiceDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery" />

        <RadioButton
            android:id="@+id/txtServiceAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_res3" />

    </RadioGroup>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textAllCaps="false" />

        <Button
            android:layout_marginStart="@dimen/_15sdp"
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAllCaps="false" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
</LinearLayout>