<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/orange001"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list_restaurant.NewRestaurantActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:id="@+id/txtTitle"
            android:text="@string/add_new_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/formCreateNewRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtIdRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edt_sign"
                android:hint="@string/id_res"
                android:padding="@dimen/_8sdp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtNameRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edt_sign"
                android:hint="@string/name_restaurant"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:padding="@dimen/_8sdp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtPhoneRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edt_sign"
                android:hint="@string/phone"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="@dimen/_8sdp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edt_sign"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edt_sign"
                android:hint="@string/address"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:padding="@dimen/_8sdp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/edt_sign"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service"
                    android:textColor="@color/colorGray222" />

                <TextView
                    android:id="@+id/txtService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/service_res3"
                    android:textColor="@color/colorGray444" />

                <TextView
                    android:id="@+id/txtChangeService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/bg_blue_3f51b5"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:text="@string/edit"
                    android:textColor="@color/blue2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/edt_sign"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chuyên:"
                    android:textColor="@color/colorGray222" />

                <TextView
                    android:id="@+id/txtKind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="Món lẩu, món Thái, Món hoa"
                    android:textColor="@color/colorGray444" />

                <TextView
                    android:id="@+id/txtChangeKind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/bg_blue_3f51b5"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:text="@string/edit"
                    android:textColor="@color/blue2" />
            </TableRow>

            <TextView
                android:id="@+id/txtShowError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/error"
                android:textColor="@color/red_Google"
                android:textSize="13sp"
                android:visibility="invisible" />


        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/formCreateNewRes"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnOkCreateNewRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_sign"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/formCreateNewRes"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_sign"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>