<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorGrayeee"
    android:orientation="vertical">

    <TextView
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:text="@string/private_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/colorGray222"
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ID:" />

        <TextView
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/colorGray222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username2" />

        <TextView
            android:textColor="@color/colorGray333"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="abcdefghik" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/colorGray222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password2" />

        <TextView
            android:textColor="@color/colorGray333"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="147258369" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/colorGray222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/full_name2" />

        <TextView
            android:textColor="@color/colorGray333"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Nguyen Van A" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/colorGray222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone2" />

        <TextView
            android:textColor="@color/colorGray333"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="123456789" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/colorGray222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prompt_email_2" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="abc@gmail.com"
            android:textColor="@color/colorGray333" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/colorGray222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address_2" />

        <TextView
            android:textColor="@color/colorGray333"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="So 1, dai co viet, hai ba trung, ha noi" />
    </LinearLayout>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">


        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:textAllCaps="false" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
</LinearLayout>